--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "SocketIo"
   ],
   "author": "Sahariar Alam Khandoker",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "socketio": "^1.0.0"
+  }
 }
