--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Sahariar Alam Khandoker",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "socketio": "^1.0.0"
   }
